Optimise update field contains checks with a HashSet